overflow issue

--- a/client/src/components/BlogContent/BlogContent.scss
+++ b/client/src/components/BlogContent/BlogContent.scss
@@ -89,6 +89,7 @@
 	&__content {
 		width: 50%;
 		position: relative;
+		overflow: hidden;
 
 		&__header {
 			background-color: $background-dark;
